data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1969.wast
;; 10. **Test Description**:     - **Scenario**: An exported method in `ModuleA` is called, which then imports and calls a function from `ModuleB` containing a `br_if` instruction to prematurely exit a block and return control.    - **Constraint Checked**: Ensures labels and operands are correctly handled and that the `br_if` correctly targets the intended block.    - **Relation to Control Flow**: Confirms handling of control flow adjustments and stack management when functions between multiple modules interact with `br_if` instructions.

(assert_invalid
  (module
    (import "ModuleB" "imported_func" (func $imported_func (result i32)))
    (func $test_func (result i32)
      (block (result i32)
        (return (br_if 0 (call $imported_func)))
      )
    )
    (export "exported_func" (func $test_func))
  )
  "type mismatch"
)